--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,69 @@
   to {
     transform: rotate(360deg);
   }
+} */
+/* .main-body{
+  padding: 20px;
+} */
+.App{
+  height: 100vh;
+  background: rgb(255,132,0);
+background: linear-gradient(133deg, rgba(255,132,0,0.5046393557422969) 0%, rgba(141,0,255,0.5018382352941176) 100%);
+}
+.form-div{
+  width: 40vw;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  position: absolute;
+  height: 85vh;
+  border: 1px solid red;
+  text-align: center;
+  backdrop-filter: blur(16px) saturate(149%);
+    -webkit-backdrop-filter: blur(16px) saturate(149%);
+    background-color: rgba(255, 255, 255, 0.42);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+form{
+  height: 88%;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  align-items: center;
+  justify-content: space-between;
+}
+input{
+  padding: 0.2rem;
+  font-size: 1.2rem;
+  text-align: center;
+  width: 70%;
+  border-radius: 15px;
+  border: none;
+}
+select{
+  padding: 0.2rem;
+  font-size: 1.2rem;
+  text-align: center;
+  width: 70%;
+  border-radius: 15px;
+}
+option{
+  border-radius: 15px;
+}
+button{
+  padding: 0.4rem;
+    font-size: 1.2rem;
+    text-align: center;
+    background-color: rgb(80, 215, 220);
+    width: 50%;
+    border: none;
+}
+button:hover{
+  background-color: crimson;
+  color: aliceblue;
+}
+p{
+  margin: 2px 0 10px;
+  color: red;
 }
